# magma_dimacs_cnf

./: .clang-format  CMakeLists.txt  README.md  tools.hpp  types.hpp
2504/: a2504.hpp
255/: a255.hpp  e255.hpp  na255.hpp  ne255.hpp
677/: a677.hpp  search.cpp  search_a2504.cpp  search_na255.cpp
677-255/: basic.cpp
